--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "firebase": "^9.12.0",
+    "happy-dom": "^7.6.4",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.9"
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "vite": "^3.0.9",
+    "vitest": "^0.24.4"
   }
 }
